# chemquiz

./: AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml  formula.html  index.html  note.md  plan.md  prototype.html  quizprototype.html
.github/workflows/: gh-pages.yml  test.yml  wasm-test.yml
catalog/: index.json
catalog/Inorganic/: compounds.json
catalog/Inorganic/Acids/: compounds.json
catalog/Inorganic/Bases_and_hydroxides/: compounds.json
catalog/Inorganic/Metals/: compounds.json
catalog/Inorganic/Metals/Alkali_metals/: compounds.json
catalog/Inorganic/Metals/Alkaline_earth_metals/: compounds.json
catalog/Inorganic/Metals/Amphoteric_metals/: compounds.json
catalog/Inorganic/Nonmetals/: compounds.json
catalog/Inorganic/Salts/: compounds.json
catalog/Inorganic/Salts/Carbonates/: compounds.json
catalog/Organic/: compounds.json
catalog/Organic/Alcohols/: compounds.json
catalog/Organic/Aliphatic_compounds/: compounds.json
catalog/Organic/Alkanes/: compounds.json
catalog/Organic/Alkynes/: compounds.json
catalog/Organic/Arenes/: compounds.json
catalog/Organic/Aromatic_compounds/: compounds.json
catalog/Organic/Biomolecules/: compounds.json
catalog/Organic/Carboxylic_acids/: compounds.json
catalog/Organic/Polymers/: compounds.json
dataset/: inorganic_polyatomic_ions.json  metal_ions_and_colors.json  organic_functional_groups.json  organic_homologous_series.json
src/: catalog.rs  catalog_manifest.rs  compound.rs  demo.rs  lib.rs  main.rs  quiz.rs  wasm.rs
style/: main.css
tests/: catalog_integration.rs  quiz_integration.rs
(+55 files in other folders)
