[package]
name = "chemquiz"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = { version = "0.5", features = ["http"] }
leptos = { version = "0.6", features = ["csr"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
tempfile = "3"
